# radarutils

./: .gitignore  404.html  README.md  TODO.md  detections.csv  diagram.md  index.html  makefile  mkdocs.yaml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/: python-package.yml
.github/workflows/: python-package.yml
changelog/: index.html
data/: rx_data_radar_0.npy  tx_data_radar_0.npy
docs/antenna/: index.html
docs/basics/: index.html
docs/core/power/: index.html
docs/plotter/: index.html
docs/radar/: index.html
docs/wave/: index.html
guide/: index.html
guide_pip/: index.html
scripts/: pdf2svg.py
search/: search_index.json
site/: hide_sidebar.js  styles.css
src/radarutils/: __init__.py  animations.py  antenna.py  basics.py  data.py  env_vars.py  plotter.py  radar.py  scene.py  wave.py
src/radarutils/core/: __init__.py  antenna.py  basics.py  env_vars.py  filters.py  power.py  probability.py  probabilty.py  pulse.py  roc.py  signal.py
src/radarutils/radar_components/: radar.py  scene.py  target.py  wave.py
src/radarutils/simulator/: __init__.py  component.py  detection.py  ppi.py  screen.py  simulator.py
src/radarutils/visualization/: __init__.py  animations.py  plotter.py
tests/: __init__.py  test_antenna.py  test_basics.py  test_imports.py  test_probability.py
tests/core/: test_imports.py
tests/plots/: antenna_plots.py  probability_plots.py  signal_plots.py
web/: changelog.md  guide_pip.md  index.md
web/diagrams/: diagrams.drawio
web/docs/: antenna.md  basics.md  plotter.md  radar.md  wave.md
web/docs/core/: power.md  probability.md
web/site/: styles.css
web/stylesheets/: custom.css
